--- a/vercel.json
+++ b/vercel.json
@@ -1,17 +1,12 @@
-
 {
   "version": 2,
   "builds": [
-   {
-    "src": "app.js",
-    "use": "@vercel/node",
-    "config": { "includeFiles": ["dist/**"] }
-   }
+    {
+      "src": "./api/*.js",
+      "use": "@vercel/node"
+    }
   ],
   "routes": [
-   {
-    "src": "/(.*)",
-    "dest": "app.js"
-   }
+    { "src": "/api/(.*)", "dest": "/api/$1" }
   ]
- }
+}
